сделал добавление и редактированимя для руководителя

--- a/Kursivoy_Konkin/Kursivoy_Konkin/Kursivoy_Konkin.csproj
+++ b/Kursivoy_Konkin/Kursivoy_Konkin/Kursivoy_Konkin.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Manager\FormManagerAddClient.Designer.cs">
       <DependentUpon>FormManagerAddClient.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manager\FormManagerClientBase.cs" />
     <Compile Include="Manager\FormManagerEditClients.cs">
       <SubType>Form</SubType>
     </Compile>
