--- a/Kursivoy_Konkin/Kursivoy_Konkin/Kursivoy_Konkin.csproj
+++ b/Kursivoy_Konkin/Kursivoy_Konkin/Kursivoy_Konkin.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -246,7 +247,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="picture.png" />
-    <Content Include="Properties\picture.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
