--- a/Kursivoy_Konkin/Kursivoy_Konkin/Kursivoy_Konkin.csproj
+++ b/Kursivoy_Konkin/Kursivoy_Konkin/Kursivoy_Konkin.csproj
@@ -236,6 +236,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="docPrint\contract.docx" />
+    <None Include="docPrint\printLTV.docx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -259,6 +261,16 @@
     <Content Include="3.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="dumb.sql" />
+    <Content Include="img\get-in.png" />
+    <Content Include="img\icon.ico" />
+    <Content Include="img\icons8-ягуар-48.ico" />
+    <Content Include="img\logo.png" />
+    <Content Include="img\picture.png" />
+    <Content Include="img\reset.png" />
+    <Content Include="img\save.png" />
+    <Content Include="img\setting.png" />
+    <Content Include="MySql.Data.dll" />
     <Content Include="picture.png" />
   </ItemGroup>
   <ItemGroup>
